Mod list working, add mod portal proxy
